map-responsive fix

--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -6922,3 +6922,53 @@ label.error {
 .location-text{
   color: #c7c7c7;
 }
+
+.gmap_canvas {
+  overflow:hidden;
+  background:none!important;
+  height:500px;
+  width:600px;
+}
+
+.mapouter {
+  position:relative;
+  text-align:right;
+  height:500px;
+  width:600px;
+}
+
+@media screen and (max-width: 1366px) {
+  .mapouter {
+    width:500px;
+  }
+  .gmap_canvas {
+    width:500px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .mapouter {
+    height:350px;
+    width:350px;
+  }
+  .gmap_canvas {
+    height:350px;
+    width:350px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .section-new.team.map{
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+  .mapouter {
+    text-align:center;
+    height:315px;
+    width:315px;
+  }
+  .gmap_canvas {
+    height:315px;
+    width:315px;
+  }
+}
