--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -1095,11 +1095,7 @@ svg.bi.bi-heart{
   font-weight: 300;
   color: #fa4e2e;
 }
-.text-h2-5-5 {
-  font-size: 20px;
-  line-height: 32px;
-  font-weight: 300;
-}
+
 .text-h2-5-5-orange {
   font-size: 20px;
   line-height: 32px;
@@ -3973,10 +3969,6 @@ svg.bi.bi-heart{
     font-size: 20px;
     line-height: 24px;
   }
-  .text-h2-5-5 {
-    font-size: 16px;
-    line-height: 24px;
-  }
   .text-h2-5-5-orange {
     font-size: 16px;
     line-height: 24px;
@@ -4863,9 +4855,6 @@ svg.bi.bi-heart{
   }
   .text-h2-5-orange{
     font-size: 16px;
-  }
-  .text-h2-5-5 {
-    font-size: 15px;
   }
   .text-h2-5-5-orange {
     font-size: 15px;
@@ -7006,6 +6995,9 @@ iframe {
   .section-new.team.map{
     padding-top: 80px;
     padding-bottom: 80px;
+  }
+  .map-route{
+    text-align: center;
   }
   iframe {
     width:315px;
