--- a/css/uxmint-consulting.css
+++ b/css/uxmint-consulting.css
@@ -278,6 +278,24 @@
   align-items: center;
 }
 
+.section-new.address{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 0px;
+  padding-bottom: 160px;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
 .section-new.team.career {
   padding-bottom: 0px;
 }
@@ -3848,6 +3866,10 @@ svg.bi.bi-heart{
     padding-top: 100px;
     padding-bottom: 100px;
   }
+  .section-new.address {
+    padding-top: 0px;
+    padding-bottom: 100px;
+  }
   .section-new.new-slider {
     height: auto;
     padding-right: 40px;
@@ -4742,6 +4764,10 @@ svg.bi.bi-heart{
   }
   .section-new.team {
     padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  .section-new.address {
+    padding-top: 0px;
     padding-bottom: 60px;
   }
   .section-new.new-slider {
@@ -5766,6 +5792,10 @@ svg.bi.bi-heart{
   .section-new.team {
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+  .section-new.address {
+    padding-top: 0px;
+    padding-bottom: 100px;
   }
   .section-new.new-slider {
     padding-right: 20px;
@@ -6977,6 +7007,24 @@ iframe {
   height:450px;
 }
 
+.h3-hd{
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.h4-hd{
+  font-size: 20px;
+  font-weight: 400;
+  padding-top: 40px;
+  padding-bottom: 20px;
+}
+
+.h4-sd{
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 30px;
+}
+
 @media screen and (max-width: 1366px) {
   iframe {
     width:500px;
@@ -6988,6 +7036,22 @@ iframe {
   iframe {
     width:350px;
     height:350px;
+  }
+  .h3-hd{
+    font-size: 18px;
+    padding-top: 40px;
+  }
+  
+  .h4-hd{
+    font-size: 18px;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+  
+  .h4-sd{
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 30px;
   }
 }
 
