--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
 @import './scss/bootstrap.scss';
 @import './scss/bootstrap-custom.scss';
+
+.container {
+    padding: 0 30px;
+    margin: 0 auto;
+}
+html, body { height: 100%; }
+body { margin: 0; font-family: 'Inter'; }
+
+/* Responsive */
+@media (min-width: 600px) {
+    .container{
+        max-width: 720px;
+        padding: 0 20px;
+    }
+}
+@media (min-width: 920px) {
+    .container{
+        max-width: 960px;
+        padding: 0 30px;
+    }
+}
+@media (min-width: 1280px) {
+    .container{
+        max-width: 1400px;
+        padding: 0 70px;
+        margin: 0 auto;
+    }
+}
