--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,35 @@
 <router-outlet></router-outlet>
+<!--Footer-->
+<footer>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <h2>Let's craft design together!</h2>
+            <div class="button">
+                <div class="btn btn-white">Let's Talk <img src="./assets/images/rightarrow.svg"></div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <h4>For a quick response</h4>
+            <ul class="contact">
+                <li>
+                    <a href="mailto:enquire@uxmint.in">hello@uxmint.design</a>
+                </li>
+                <li>
+                    <a href="tel:+91 9884053886">+91 9884053886</a>
+                </li>
+                <li>
+                    <a href="tel:+91 9940410072">+91 9940410072</a>
+                </li>
+            </ul>
+            <ul class="socialmedia">
+                <li><img src="./assets/images/linkedin.svg"></li>
+                <li><img src="./assets/images/medium.svg"></li>
+            </ul>
+            <div class="credits">
+                @2021 . <span><a>Privacy Policy</a></span> . <span><a>Terms & Conditions</a></span>
+            </div>
+        </div>
+    </div>
+</div>
+</footer>
