--- a/src/scss/bootstrap-custom.scss
+++ b/src/scss/bootstrap-custom.scss
@@ -1,5 +1,5 @@
 //Container Max Width
-$font-family-sans-serif: 'Lato', sans-serif;
+$font-family-sans-serif: 'Inter', sans-serif;
 $container-max-widths: (
   sm: 540px,
   md: 720px,
