--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,8 @@
                 </li>
             </ul>
             <ul class="socialmedia">
-                <li><img src="./assets/images/linkedin.svg"></li>
-                <li><img src="./assets/images/medium.svg"></li>
+                <li><a href="https://www.linkedin.com/company/uxmint" target="_blank"><img src="./assets/images/linkedin.svg"></a></li>
+                <li><a href="https://medium.com/uxmint" target="_blank"><img src="./assets/images/medium.svg"></a></li>
             </ul>
             <div class="credits">
                 @2021 . <span><a>Privacy Policy</a></span> . <span><a>Terms & Conditions</a></span>
