--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,1 +1,28 @@
-<p>blogs works!</p>
+<div class="blogs">
+<div class="container">
+    <div class="blog-layout1">
+            <h1>MINTify your thoughts <span> with <br> our latest blogs and articles</span> </h1>
+            <h6>For more blogs like this checkout our <span>Medium</span></h6>
+    </div>
+</div>
+    <div class="blog-layout2">
+        <div class="container">
+        <div class="row">
+            <div class="col-md-6 image-center">
+                <div class="blogs-image">
+                    <img src="./assets/images/services/image1.png">
+                 </div>
+                <h6>Designing a successful <br> product: Is not a daydream</h6>
+                <span>by Udaya Kumar Sivagurunathan</span>
+            </div>
+            <div class="col-md-6 image-center">
+                <div class="blogs-image">
+                    <img src="./assets/images/services/image2.png">
+                 </div>
+                 <h6>Ever thought why does <br> the colour green or sound</h6>
+                 <span>by Krithika Thirunavukkarasu</span>
+            </div>
+    </div>
+</div>
+</div>
+</div>
