--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -1,7 +1,7 @@
 <div class="about-us">
    <div class="about">
       <div class="container">
-         <div class="desgin">
+         <div class="design">
             <h1>There is always a better way <br> to do it & we find it </h1>
             <h5>- by Thomas Alva Edison + uxmint</h5>
          </div>
@@ -9,9 +9,9 @@
    </div>
    <div class="about-layout">
       <div class="row">
-         <div class="col-md-6 desgin-layout">
+         <div class="col-md-6 design-layout">
            <div class="container">
-            <div class="desgin-left">
+            <div class="design-left">
                <h2> We have created <br> products that are <br> loved by users and <br> product owners</h2>
                <h6>If you want your product to be <br> loved by its users ?</h6>
                <div class="button">
@@ -20,12 +20,39 @@
             </div>
             </div>
          </div>
-         <div class="col-md-6 desgin-layouts">
+         <div class="col-md-6 design-layouts">
            <div class="container">
-            <div class="desgin-right">
-               <div class="blogs-image">
-                   <img src="./assets/images/services/Group-logo.png">
-                </div>
+              <div class="row">
+               <div class="col-md-6">  
+            <div class="design-right">
+                <ul class="logo">
+                <li>
+                  <img src="./assets/images/services/logo-1.svg">
+                </li>
+                <li>
+                  <img src="./assets/images/services/logo-3.svg">
+                </li>
+                <li>
+                  <img src="./assets/images/services/logo-5.svg">
+                </li>
+            </ul>
+         </div>
+         </div>
+         <div class="col-md-6">  
+            <div class="design-right">
+                <ul class="logo">
+                <li>
+                  <img src="./assets/images/services/logo-2.svg">
+                </li>
+                <li>
+                  <img src="./assets/images/services/logo-4.svg">
+                </li>
+                <li>
+                  <img src="./assets/images/services/logo-6.svg">
+                </li>
+            </ul>
+         </div>
+         </div>
             </div>
             </div>
          </div>
@@ -33,9 +60,9 @@
       </div>
    <div class="about-layout1">
       <div class="row">
-         <div class="col-md-6 desgin-layout">
+         <div class="col-md-6 design-layout">
            <div class="container">
-            <div class="desgin-left">
+            <div class="design-left">
                <h2> We have built & are building some great products together</h2>
                <div class="button">
                   <div class="btn btn-white">Check our Service <img src="./assets/images/rightarrow-white.svg"></div>
@@ -43,11 +70,15 @@
             </div>
          </div>
          </div>
-         <div class="col-md-6 desgin-layouts">
-           <div class="container">
-            <div class="desgin-right">
+         <div class="col-md-6 design-layouts">
+           <div class="layouts">
+            <div class="design-right">
                <h5>Startups</h5>
                <p>We've been there and we exactly know the struggles and whst it takes to build a product from  the scrarch. We have the expertise to validate your ideas with the right process and to bring the right solutions for your target customers and ensure a</p>
+            </div>
+            <div class="design-right">
+               <h5>Established Brands</h5>
+               <p>We work with mid-size or large organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacysystem.</p>
             </div>
          </div>
       </div>
@@ -55,7 +86,7 @@
    </div>
    <div class="about-layout2">
       <div class="container">
-         <div class="desgin">
+         <div class="design">
             <h2>We are a mix of Designers, Artists, <br> Psychologists, Programmers, Engineers, <br> Architects & more. </h2>
             <h6>We've come together to build great Products and Services. Drop in <br> your detail if you want to be a part of us.</h6>
             <div class="button">
